<resources>
    <string name="app_name">FoodRecipeApp</string>
    <string name="next">Next</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="get_started">Get Started</string>
    <string name="logo_description">50K+ Premium Recipe</string>
    <string name="slogan_1">Discover Delightful Recipes</string>
    <string name="slogan_content_1">Explore a world of mouthwatering dishes and unleash your inner chef</string>
    <string name="slogan_2">Embrace the Joy of Cooking</string>
    <string name="slogan_content_2">Experience the pleasure of delicious meals for your self</string>
    <string name="slogan_3">Let\'s Cooking</string>
    <string name="slogan_content_3">Find best recipes for cooking</string>
    <string name="action_home">Home</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_setting">Setting</string>
    <string name="find_best_recipes_for_cooking">Find Best Recipes For Cooking</string>
    <string name="favourites_recipes">Favourites Recipes</string>
    <string name="no_favorite_recipes_saved_yet">No favorite recipes saved yet</string>
    <string name="settings">Settings</string>
    <string name="dish_name">Dish name</string>
    <string name="popular_category">Popular Category</string>
    <string name="serving">Serving</string>
    <string name="total_servings">2 Servings</string>
    <string name="like">Like</string>
    <string name="total_likes">2 Likes</string>
    <string name="time">Time</string>
    <string name="time_servings">15 Mins</string>
    <string name="classic_greek_salad">Classic Greek Salad</string>
    <string name="see_all">See all ➜</string>
    <string name="indonesian_chiken_burger">Indonesian chiken burger</string>
    <string name="recent_recipe">Recent Recipe</string>
    <string name="loading">Loading…</string>
    <string name="no_search_input">You have not entered anything yet…</string>
    <string-array name="categories">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_title">Remove from favourite recipe</string>
    <string name="alert_message">Are you sure to unmarked this recipe?</string>
    <string name="confirm_unmarked">Successfully unmarked!</string>
    <string name="yes_choice">Yes</string>
    <string name="no_choice">No</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="bookmark_recipe">Successfully bookmarked to favorite recipes list</string>
    <string name="unmark_recipe">Successfully unmarked to favorite recipes list</string>
    <string name="view_all_recipes">View All Recipes</string>
    <string name="view_all_recent_recipes">View All Recent Recipes</string>
    <string name="no_recipe_founded">No recipe founded</string>
    <string name="ingredient">Ingredient</string>
    <string name="procedure">Procedure</string>
    <string name="items">10 Items</string>
    <string name="green_apple">Green Apple</string>
    <string name="number_green_apple">2 Green Apple</string>
</resources>
