<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/slide_item_1"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_background"
        app:layout_constraintVertical_bias="0.1"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_description"
            android:layout_marginTop="@dimen/dp_12"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_background"
        app:layout_constraintVertical_bias="0.45"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginHorizontal="@dimen/dp_60"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_slogan_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_54"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_background"
            app:layout_constraintTop_toTopOf="@+id/img_background"
            tools:layout_editor_absoluteX="0dp" />


        <TextView
            android:id="@+id/tv_slogan_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_content_1"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
