<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_container"
        android:layout_width="@dimen/dp_170"
        android:layout_height="@dimen/dp_270"
        android:layout_marginHorizontal="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_10"
        app:cardBackgroundColor="@color/light_yellow"
        app:cardCornerRadius="@dimen/dp_20"
        app:cardElevation="@dimen/dp_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_food"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:src="@drawable/food_icon"
                app:civ_border_color="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.025" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/classic_greek_salad"
                android:textAlignment="center"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.393"
                tools:layout_editor_absoluteX="-1dp" />

            <ImageView
                android:id="@+id/img_serving"
                android:layout_width="@dimen/dp_19"
                android:layout_height="@dimen/dp_19"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/dp_70"
                android:src="@drawable/baseline_room_service_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.436"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_toEndOf="@id/img_serving"
                android:text="@string/serving"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.445"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_number_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_70"
                android:text="@string/total_servings"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.445"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/img_like"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/dp_70"
                android:src="@drawable/baseline_thumb_up_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.554"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_toEndOf="@id/img_like"
                android:text="@string/like"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/img_like"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.559"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_number_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_70"
                android:text="@string/total_likes"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.559"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/img_time"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/dp_70"
                android:src="@drawable/baseline_access_time_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.675"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_toEndOf="@id/img_time"
                android:text="@string/time"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.679"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_estimate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp_70"
                android:text="@string/time_servings"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.679"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_favourite"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="@dimen/dp_28"
                android:layout_height="@dimen/dp_28"
                android:backgroundTint="@color/white"
                android:insetLeft="@dimen/dp_0"
                android:insetTop="@dimen/dp_0"
                android:insetRight="@dimen/dp_0"
                android:insetBottom="@dimen/dp_0"
                android:padding="@dimen/dp_0"
                app:icon="@drawable/black_baseline_favorite_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dp_0"
                app:iconSize="@dimen/dp_18"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.933"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
