<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow"
    android:paddingHorizontal="@dimen/dp_20"
    android:paddingTop="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_8"
    tools:context=".screen.detail.RecipeDetailFragment">

    <ImageView
        android:id="@+id/img_back_button"
        android:layout_width="@dimen/dp_34"
        android:layout_height="@dimen/dp_26"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_marginBottom="@dimen/dp_4"
        app:cardCornerRadius="@dimen/dp_20"
        app:cardElevation="@dimen/dp_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightDarkLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/dp_300"
                android:layout_height="wrap_content"
                android:text="@string/indonesian_chiken_burger"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.225"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.576" />

            <ImageView
                android:id="@+id/img_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_access_time_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_estimate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_servings"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.152"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.894" />

            <ImageView
                android:id="@+id/img_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_thumb_up_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.463"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.902"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_total_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_likes"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.592"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.894" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_favourite"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="@dimen/dp_26"
                android:layout_height="@dimen/dp_26"
                android:backgroundTint="@color/white"
                android:insetLeft="@dimen/dp_0"
                android:insetTop="@dimen/dp_0"
                android:insetRight="@dimen/dp_0"
                android:insetBottom="@dimen/dp_0"
                android:padding="@dimen/dp_0"
                app:icon="@drawable/black_baseline_favorite_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dp_0"
                app:iconSize="@dimen/dp_18"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.908"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_44"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/ingredient"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintVertical_bias="0.051" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_procedure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/dp_44"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/procedure"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_16"
        android:textStyle="normal"
        app:cornerRadius="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintVertical_bias="0.048" />

    <ImageView
        android:id="@+id/img_serving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_room_service_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ingredient"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_serving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_servings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ingredient"
        app:layout_constraintVertical_bias="0.060" />

    <ImageView
        android:id="@+id/img_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_tips_and_updates_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_procedure"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_procedure"
        app:layout_constraintVertical_bias="0.066" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_recipe_detail_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_serving"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/item_ingredient" />

</androidx.constraintlayout.widget.ConstraintLayout>
